学生信息显示

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
     <script src="./js/index.js"></script>
 </head>
 <body>
-   <div>
+    <div>
        <div class="header">
            <div class="header_co">
             <!-- 左 -->
@@ -27,217 +27,155 @@
                 <div class="logo">
                     <img src="./images/logo.jpg" alt="">
                 </div>
-                <div class="search-input">
-                    <input type="search" placeholder="搜索资料">
-                    <button>搜索</button>
-                </div>
                 <div class="gongneng">
-                    <div class="gongnenglf">
-                         <span class="ziyuan"><a href="">资源导航</a></span>
-                    </div> 
-                    <!-- 功能栏 -->  
-                         <div class="gongnengri">
-                            <span><a href="./lianxi.html">基础练习</a></span>
-                            <span><a href="./zuoye.html">班级作业</a></span>
-                            <span><a href="./shijuan.html">模拟试卷</a></span>
-                            <span><a href="./tongzhi.html">班级通知</a></span>
-                        </div>
-                </div>
-           </div>
-       </div>
-       <!-- 图片 -->
-       <div class="lunbotu">
-            <img src="./images/lunbotu2.jpg" alt="">
-       </div>
-       <!-- 课程试卷 -->
-       <div class="kechengshijuan">
-           <div class="kc"><span>课程试卷</span></div>
-           <!-- 第一行 -->
-           <div class="kc-i1">
-               <!-- 三列 -->
-               <div class="kc-j1">
-                   <div class="nj"><span>一年级</span></div>
-                   <div class="sj-1">
-                       <ul>
-                           <li><a target="_blank" href="http://www.xuekeedu.com/softlist/sx-g1-type3/">2017-2018学年人教版上册期中试卷</a></li>
-                           <li><a target="_blank" href="http://www.xuekeedu.com/softlist/sx-g2-type3-subtype9/">2017-2018学年人教版上册期末试卷</a></li>
-                           <li><a href="">2017-2018学年人教版下册期中试卷</a></li>
-                           <li><a href="">2017-2017学年人教版下册期末试卷</a></li>
-                           <li><a href="">2015-2016学年人教版下册期中试卷</a></li>
-                           <li><a href="">2015-2016学年人教版下册期末试卷</a></li>
-                       </ul>
-                   </div>
-               </div>
-               <div class="kc-j2">
-                    <div class="nj"><span>二年级</span></div>
-                    <div class="sj-1">
-                        <ul>
-                           <li><a href="">2017-2018学年人教版下册期中试卷</a></li>
-                           <li><a href="">2017-2018学年人教版下册期末试卷</a></li>
-                           <li><a href="">2016-2017学年人教版下册期中试卷</a></li>
-                           <li><a href="">2016-2017学年人教版下册期末试卷</a></li>
-                           <li><a href="">2015-2016学年人教版下册期中试卷</a></li>
-                           <li><a href="">2015-2016学年人教版下册期末试卷</a></li>
-                        </ul>
-                    </div>
-               </div>
-               <div class="kc-j3">
-                    <div class="nj"><span>三年级</span></div>
-                    <div class="sj-1">
-                        <ul>
-                           <li><a href="">2017-2018学年人教版下册期中试卷</a></li>
-                           <li><a href="">2017-2018学年人教版下册期末试卷</a></li>
-                           <li><a href="">2016-2017学年人教版下册期中试卷</a></li>
-                           <li><a href="">2016-2017学年人教版下册期末试卷</a></li>
-                           <li><a href="">2015-2016学年人教版下册期中试卷</a></li>
-                           <li><a href="">2015-2016学年人教版下册期末试卷</a></li>
-                        </ul>
-                    </div>
-               </div>
-           </div>
-           <!-- 第二行 -->
-           <div class="kc-i2">
-               <div class="kc-j4">
-                    <div class="nj"><span>四年级</span></div>
-                    <div class="sj-1">
-                        <ul>
-                            <li><a href="">2017-2018学年人教版下册期中试卷</a></li>
-                            <li><a href="">2017-2018学年人教版下册期末试卷</a></li>
-                            <li><a href="">2016-2017学年人教版下册期中试卷</a></li>
-                            <li><a href="">2016-2017学年人教版下册期末试卷</a></li>
-                            <li><a href="">2015-2016学年人教版下册期中试卷</a></li>
-                            <li><a href="">2015-2016学年人教版下册期末试卷</a></li>
-                        </ul>
-                    </div>
-               </div>
-               <div class="kc-j5">
-                    <div class="nj"><span>五年级</span></div>
-                    <div class="sj-1">
-                        <ul>
-                            <li><a href="">2017-2018学年人教版下册期中试卷</a></li>
-                            <li><a href="">2017-2018学年人教版下册期末试卷</a></li>
-                            <li><a href="">2016-2017学年人教版下册期中试卷</a></li>
-                            <li><a href="">2016-2017学年人教版下册期末试卷</a></li>
-                            <li><a href="">2015-2016学年人教版下册期中试卷</a></li>
-                            <li><a href="">2015-2016学年人教版下册期末试卷</a></li>
-                        </ul>
-                    </div>
-               </div>
-               <div class="kc-j6">
-                    <div class="nj"><span>六年级</span></div>
-                    <div class="sj-1">
-                        <ul>
-                            <li><a href="">2017-2018学年人教版下册期中试卷</a></li>
-                            <li><a href="">2017-2018学年人教版下册期末试卷</a></li>
-                            <li><a href="">2016-2017学年人教版下册期中试卷</a></li>
-                            <li><a href="">2016-2017学年人教版下册期末试卷</a></li>
-                            <li><a href="">2015-2016学年人教版下册期中试卷</a></li>
-                            <li><a href="">2015-2016学年人教版下册期末试卷</a></li>
-                        </ul>
-                    </div>
-               </div>
-           </div>
-       </div>
-       <!-- 视频教学 -->
-       <div class="shipinjiaoxue">
-            <div class="sp"><span>视频教学</span></div>
-            <!-- 第一行 -->
-            <div class="sp-i1">
-                <!-- 三列 -->
-                <div class="sp-j1">
-                    <div class="nj"><span>一年级</span></div>
-                    <div class="sj-1">
-                       <ul>
-                           <li><a href="">十以内数的认识和加减法</a></li>
-                           <li><a href="">认识图形</a></li>
-                           <li><a href="">10~20数的认识</a></li>
-                           <li><a href="">50以内的进位加法</a></li>
-                           <li><a href="">20以内的退位减法</a></li>
-                           <li><a href="">100以内的读法和写法</a></li>
-                       </ul>
-                   </div>
-                </div>
-                <div class="sp-j2">
-                    <div class="nj"><span>二年级</span></div>
-                    <div class="sj-1">
-                       <ul>
-                           <li><a href="">100以内的加法和减法</a></li>
-                           <li><a href="">厘米和米的认识</a></li>
-                           <li><a href="">表内乘法</a></li>
-                           <li><a href="">表内除法</a></li>
-                           <li><a href="">角和直角</a></li>
-                           <li><a href="">表内乘法和表内除法</a></li>
-                       </ul>
-                    </div>
-                </div>
-                <div class="sp-j3">
-                    <div class="nj"><span>三年级</span></div>
-                    <div class="sj-1">
-                       <ul>
-                           <li><a href="">一个因数是一位数的乘法</a></li>
-                           <li><a href="">除数是一位数的除法</a></li>
-                           <li><a href="">千米和吨的认识</a></li>
-                           <li><a href="">混合运算和两步应用题</a></li>
-                           <li><a href="">长方形、正方形和平行四边形</a></li>
-                           <li><a href="">一个因数是两位数的乘法</a></li>
-                       </ul>
-                    </div>
-                </div>
-            </div>
-            <!-- 第二行 -->
-            <div class="sp-i2">
-                <div class="sp-j4">
-                    <div class="nj"><span>四年级</span></div>
-                    <div class="sj-1">
-                       <ul>
-                           <li><a href="">亿以内的读法和写法</a></li>
-                           <li><a href="">亿以内的加法和减法</a></li>
-                           <li><a href="">乘法、除法的知识</a></li>
-                           <li><a href="">分数的初步认识</a></li>
-                           <li><a href="">长方形和正方形的面积</a></li>
-                           <li><a href="">混合运算和应用题</a></li>
-                       </ul>
-                    </div>
-                </div>
-                <div class="sp-j5">
-                    <div class="nj"><span>五年级</span></div>
-                    <div class="sj-1">
-                       <ul>
-                           <li><a href="">小数的乘法和除法</a></li>
-                           <li><a href="">小数、整数四则混合运算</a></li>
-                           <li><a href="">多边形面积的计算</a></li>
-                           <li><a href="">简易方程</a></li>
-                           <li><a href="">简单的统计</a></li>
-                           <li><a href="">长方体和正方体</a></li>
-                       </ul>
-                    </div>
-                </div>
-                <div class="sp-j6">
-                    <div class="nj"><span>六年级</span></div>
-                    <div class="sj-1">
-                       <ul>
-                           <li><a href="">分数乘法</a></li>
-                           <li><a href="">分数除法</a></li>
-                           <li><a href="">分数四则混合运算和应用题</a></li>
-                           <li><a href="">圆</a></li>
-                           <li><a href="">百分数</a></li>
-                           <li><a href="">比例</a></li>
-                       </ul>
-                    </div>
-                </div>
+                    <span class="shouye"><a href="">网站首页</a></span>
+                    <span><a href="./lianxi.html">基础练习</a></span>
+                    <span><a href="./zuoye.html">班级作业</a></span>
+                    <span><a href="./shijuan.html">模拟试卷</a></span>
+                    <span><a href="./tongzhi.html">班级通知</a></span>
+                </div>         
             </div>
         </div>
-        <div class="friendlink">
-            <div class="friend"><span>友情链接</span></div>
-            <div class="lj">
-                <span><a href="http://zxxk.com">学科网</a></span>
-                <span><a href="http://http://zujuan.xkw.com/">组卷网</a></span>
-                <span><a href="http://">教育网</a></span>
-                <span><a href="http://">中小学教育网</a></span>
-                <span><a href="http://">广西招生办</a></span>
-                <span><a href="http://www.baidu.com">百度一下</a></span>
+    </div>
+    <div class="cont">
+        <div class="con-tu">
+            <div class="coni"><img src="./images/shouye.jpg" alt=""></div>
+            <div class="conwen">
+                <p class="xuexi">学习方法</p>
+                <p class="xuexilianjie">
+                    <a href="http://baijiahao.baidu.com/s?id=1579034090874031635&wfr=spider&for=pc">学习技巧</a>
+                    <a href="http://www.bjdcfy.com/jihua/xxsxxjh/2018-9/1259813.html">学习策划</a>
+                    <a href="https://wenku.baidu.com/view/d17b76b1ad02de80d5d84016.html">课前准备</a>
+                </p>
+                <p class="xuexilianjie">
+                    <a href="http://www.wudu001.com/list/90/1/">课堂听课</a>
+                    <a href="http://www.wudu001.com/list/90/1/">复习方法</a>
+                    <a href="http://www.wudu001.com/list/90/1/">考试技巧</a>
+                </p>
             </div>
         </div>
+        <div class="con-ma">
+            <div class="mingyan"></div>
+            <div class="shijuan">
+                <div class="zujuan">
+                    <p class="sj">课程视频</p>
+                    <p>
+                        <a href="">一年级上</a>
+                        <a href="">一年级下</a>
+                    </p>
+                    <p>
+                        <a href="">二年级上</a>
+                        <a href="">二年级下</a>
+                    </p>
+                    <p>
+                        <a href="">三年级上</a>
+                        <a href="">三年级下</a>
+                    </p>
+                    <p>
+                        <a href="">四年级上</a>
+                        <a href="">四年级下</a>
+                    </p>
+                    <p>
+                        <a href="">五年级上</a>
+                        <a href="">我年级下</a>
+                    </p>
+                    <p>
+                        <a href="">六年级上</a>
+                        <a href="">六年级下</a>
+                    </p>
+                </div>
+                <div class="shipin">
+                    <p class="sj">在线组卷</p>
+                    <p>
+                        <a href="">一年级上</a>
+                        <a href="">一年级下</a>
+                    </p>
+                    <p>
+                        <a href="">二年级上</a>
+                        <a href="">二年级下</a>
+                    </p>
+                    <p>
+                        <a href="">三年级上</a>
+                        <a href="">三年级下</a>
+                    </p>
+                    <p>
+                        <a href="">四年级上</a>
+                        <a href="">四年级下</a>
+                    </p>
+                    <p>
+                        <a href="">五年级上</a>
+                        <a href="">我年级下</a>
+                    </p>
+                    <p>
+                        <a href="">六年级上</a>
+                        <a href="">六年级下</a>
+                    </p>
+                </div>
+
+            </div>   
+        </div>
+        <div class="con-t">
+                <div class="zixun">
+                    <p class="zx">校园新闻</p>
+                    <p>
+                        <a href="https://baijiahao.baidu.com/s?id=1619852836264570079&wfr=spider&for=pc">青秀区埌东小学校园小记者出动啦！</a>
+                    </p>
+                    <p>
+                        <a href="https://baijiahao.baidu.com/s?id=1615834524484752307&wfr=spider&for=pc">南宁中小学校园足球运动蓬勃发展</a>
+                    </p>
+                    <p>
+                        <a href="https://baijiahao.baidu.com/s?id=1615726994352105729&wfr=spider&for=pc">红色旅游走进南宁市凤翔路小学</a>
+                    </p>
+                    <p>
+                        <a href="http://baijiahao.baidu.com/s?id=1596603668613268044&wfr=spider&for=pc">滨湖路小学：成为“梦开始的地方”</a>
+                    </p>
+                    <p>
+                        <a href="https://baijiahao.baidu.com/s?id=1589297775216405540&wfr=spider&for=pc">中国杯牵手球童选拔进校园</a>
+                    </p>
+                    <p>
+                        <a href="https://baijiahao.baidu.com/s?id=1613064917648598705&wfr=spider&for=pc">越秀路小学“校园记者站”授牌仪式</a>
+                    </p>
+                </div>
+                <div class="fengguang">
+                    <p class="fg">学校资讯</p>
+                    <p>
+                        <a href="https://baike.baidu.com/item/%E5%8D%97%E5%AE%81%E5%B8%82%E8%A7%A3%E6%94%BE%E8%B7%AF%E5%B0%8F%E5%AD%A6/8068928?fr=aladdin">南宁市解放路小学</a>
+                        
+                    </p>
+                    <p>
+                        <a href="https://baike.baidu.com/item/%E5%8D%97%E5%AE%81%E5%B8%82%E6%9C%9D%E9%98%B3%E8%B7%AF%E5%B0%8F%E5%AD%A6">南宁市朝阳路小学</a>
+                        
+                    </p>
+                    <p>
+                        <a href="https://baike.baidu.com/item/%E5%8D%97%E5%AE%81%E5%B8%82%E4%BA%BA%E6%B0%91%E8%B7%AF%E4%B8%9C%E6%AE%B5%E5%B0%8F%E5%AD%A6">南宁市人民路东段小学</a>
+                    </p>
+                    <p>
+                        <a href="https://baike.baidu.com/item/%E5%8D%97%E5%AE%81%E5%B8%82%E5%8D%8E%E5%BC%BA%E8%B7%AF%E5%B0%8F%E5%AD%A6">南宁市华强路小学</a>
+                    </p>
+                    <p>
+                        <a href="https://baike.baidu.com/item/%E5%8D%97%E5%AE%81%E5%B8%82%E5%AE%89%E5%AE%81%E8%B7%AF%E5%B0%8F%E5%AD%A6">南宁市安宁路小学</a>
+                    </p>
+                    <p>
+                        <a href="https://baike.baidu.com/item/%E5%8D%97%E5%AE%81%E5%B8%82%E7%87%95%E5%AD%90%E5%B2%AD%E5%B0%8F%E5%AD%A6">南宁市燕子岭小学</a>
+                    </p>
+                </div>
+            <div class="conj">
+                <img src="./images/weixinpng.png" alt="">
+                <p>手机扫一扫，关注我们</p>
+            </div>
+        </div>   
+    </div>
+    <div class="friendlink">
+        <div class="friend"><span>友情链接</span></div>
+        <div class="lj">
+            <span><a href="http://zxxk.com">学科网</a></span>
+            <span><a href="http://http://zujuan.xkw.com/">组卷网</a></span>
+            <span><a href="http://">教育网</a></span>
+            <span><a href="http://">中小学教育网</a></span>
+            <span><a href="http://">广西招生办</a></span>
+            <span><a href="http://www.baidu.com">百度一下</a></span>
+        </div>
+    </div>
         <div class="banquan">
             <p>地址：中国广西桂林市雁山区雁山镇雁中路3号 邮编:541006<br />
                 版权所有：李俊生
