--- a/demo/zuoye.html
+++ b/demo/zuoye.html
@@ -64,28 +64,19 @@
        </div>
        <!-- 导航 -->
        <div class="nav">
-           <div class="nav_co">
-                <div class="logo">
-                    <img src="./images/logo.jpg" alt="">
-                </div>
-                <div class="search-input">
-                    <input type="search" placeholder="搜索资料">
-                    <button>搜索</button>
-                </div>
-                <div class="gongneng">
-                    <div class="gongnenglf">
-                         <span class="ziyuan"><a href="./index.html">资源导航</a></span>
-                    </div> 
-                    <!-- 功能栏 -->  
-                         <div class="gongnengri">
-                            <span class="jichulianxi"><a href="./lianxi.html">基础练习</a></span>
-                            <span class="banjizuoye"><a href="./zuoye.html">班级作业</a></span>
-                            <span><a href="./shijuan.html">模拟试卷</a></span>
-                            <span><a href="./tongzhi.html">班级通知</a></span>
-                        </div>
-                </div>
-           </div>
-       </div>
+            <div class="nav_co">
+                 <div class="logo">
+                     <img src="./images/logo.jpg" alt="">
+                 </div>
+                 <div class="gongneng">
+                     <span><a href="./index.html">网站首页</a></span>
+                     <span><a href="./lianxi.html">基础练习</a></span>
+                     <span class="shouye"><a href="./zuoye.html">班级作业</a></span>
+                     <span><a href="./shijuan.html">模拟试卷</a></span>
+                     <span><a href="./tongzhi.html">班级通知</a></span>
+                 </div>         
+             </div>
+         </div>
        <!-- 班级作业 -->
        <div class="zuoye">
             <div>
