--- a/demo/adminStudent.html
+++ b/demo/adminStudent.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <script src="../../bootstrap-3.3.7-dist/js/bootstrap.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="./css/adminHome.css">
     <link rel="stylesheet" href="./css/adminStudent.css">
     <script src="./js/jq.js"></script>
@@ -33,6 +35,7 @@
                     <li role="presentation" class="active"><a href="./adminStudent.html">学生管理</a></li>
                     <li role="presentation"><a href="./adminWork.html">作业下发</a></li>
                     <li role="presentation"><a href="./adminMessage.html">下发通知</a></li>
+                    <li role="presentation"><a href="./adminGrade.html">查看成绩</a></li>
                 </ul>
             </div>
             <div class="content">
