--- a/demo/login.html
+++ b/demo/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/login.css">
     <script src="./js/jq.js"></script>
     <script src="./js/login.js"></script>
@@ -57,5 +58,6 @@
                 <button class="btn btn-primary" id="login">登录</button>
         </div>
     </div>
+    <script src="../../bootstrap-3.3.7-dist/js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
