--- a/demo/personal.html
+++ b/demo/personal.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <script src="../../bootstrap-3.3.7-dist/js/bootstrap.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="./css/personal.css">
     <script src="./js/jq.js"></script>
 </head>
@@ -20,7 +22,7 @@
             <span class="he_lf"><a href="./index.html">数学网</a><b>-寻找热爱学习的你</b></span>
             <!-- 右 -->
             <div class="he_ri">
-                <span><a href="./personal.html">个人中心</a></span>
+                <span><a href="./index.html">返回首页</a></span>
                 <span><a href="./about.html">关于我们</a></span>
             </div>
             </div>
